--- a/literature.bib
+++ b/literature.bib
@@ -58186,4 +58186,57 @@ African Linguistics",
 	year="1999"
 }
 
+@article{baayen1993on,
+	title="On frequency, transparency and productivity",
+	author="Harald {Baayen}",
+	journal="",
+	pages="181--208",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/54741546",
+	year="1993"
+}
+
+
+@article{priva2017informativity,
+	title="Informativity and the actuation of lenition",
+	author="Uriel Cohen {Priva}",
+	journal="Language",
+	volume="93",
+	number="3",
+	pages="569--597",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2754921686",
+	year="2017"
+}
+
+
+@article{hay2005shifting,
+	title="Shifting paradigms: gradient structure in morphology.",
+	author="Jennifer B. {Hay} and R. Harald {Baayen}",
+	journal="Trends in Cognitive Sciences",
+	volume="9",
+	number="7",
+	pages="342--348",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2116850456",
+	year="2005"
+}
+
+@article{hay2004what,
+	title="What Constrains Possible Suffix Combinations? On the Interaction of Grammatical and Processing Restrictions in Derivational Morphology",
+	author="Jennifer {Hay} and Ingo {Plag}",
+	journal="Natural Language and Linguistic Theory",
+	volume="22",
+	number="3",
+	pages="565--596",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2039303701",
+	year="2004"
+}
+
+@article{plag2002the,
+	title="The role of selectional restrictions, phonotactics and parsing in constraining suffix ordering in English",
+	author="Ingo {Plag}",
+	journal="",
+	pages="285--314",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2278818741",
+	year="2002"
+}
+
 
