--- a/name.tex
+++ b/name.tex
@@ -887,7 +887,9 @@ In most cases, we found that the real ordering provided more efficient tradeoffs
 More importantly, we found that the real orderings match the optimal orderings in many respects.
 Ordering forms found in a corpus according according to real or optimized orderings yields the same orders in XXX of cases.
 In some cases, particularly for noun inflection, match between real and optimized orderings is perfect.
-Beyond language-specific ordering patterns, optimization recovers previously-documented language universals of morpheme order. \jd{These results support...}
+Beyond language-specific ordering patterns, optimization recovers previously-documented language universals of morpheme order.
+These results support the idea that optimization for processing effort can explain universals of morpheme ordering.
+
 
 
 
@@ -911,27 +913,26 @@ Beyond language-specific ordering patterns, optimization recovers previously-doc
 
 In this section, we relate our results to existing explanatory accounts of morpheme ordering.
 In a review of research on morpheme ordering, \citet{manova2010modeling} % https://homepage.univie.ac.at/stela.manova/modeling%20affix%20order.pdf
-categorizes approaches to morpheme ordering into three classes (similarly \citet{rice2000morpheme}): orderings that are grammatically motivated by properties of syntac, semantics or phonology; orderings that extra-grammatically motivated by statistical properties of language and human cognition; and orderings that are arbitrarily stipulated.
+categorize approaches to morpheme ordering into three classes (similarly \citet{rice2000morpheme}): orderings that are grammatically motivated by properties of syntax, semantics or phonology; orderings that are motivated by human cognition and statistical properties of language; and orderings that are arbitrarily stipulated.
 Our approach falls into the second class, explaining morpheme ordering based on minimization of human processing effort.
 In this section, we describe how our account relates to other accounts across these three clusters, and show how the memory-surprisal tradeoff has tight connections with notions proposed across seemingly very different accounts.
 
 
 
-- citing \cite{rice2000morpheme}; Manova and Aronoff 2010; Saarinen and Hay 2014
-
-Rice states three types of explanations/phenomena:
-
-
-
-- extra-grammatical: frequency, productivity, parsability
+%- citing \cite{rice2000morpheme}; Manova and Aronoff 2010; Saarinen and Hay 2014
+%Rice states three types of explanations/phenomena:
+%- extra-grammatical: frequency, productivity, parsability
 
 
 \subsection{Grammatical Motivations}
 
-- grammatuical principle (syntactic, semantic, phonological). famous examples Mirror Principle and Bybee's relevance Principle; Scope (Rice)
+A family of theories hold that morpheme ordering is motivated by constraints placed on morphology through the interaction with other aspects of grammar.
+The appriaches most relevant for our results are approaches in terms of the relation of morphology to syntax~\citep{baker1985the} and semantics~\citep{bybee-morphology-1985,rice2000morpheme}.
+
+%- grammatuical principle (syntactic, semantic, phonological). famous examples Mirror Principle and Bybee's relevance Principle; Scope (Rice)
 
 
-Mirror princuiple built into Distributed Morphology (Harley and Noyer 1998)
+%Mirror princuiple built into Distributed Morphology (Harley and Noyer 1998)
 
 %\mhahn{report the following somewhere}
 %We measured the mutual information between roots and features using the other Universal Dependencies corpora for which these features were available.
@@ -955,13 +956,13 @@ Mirror princuiple built into Distributed Morphology (Harley and Noyer 1998)
 %\paragraph{Morphemes as Fossilized Words}\
 
 It has long been observed that the order of morphemes often parallels the order of independent words of corresponding meanings \citep{givon1971historical,venneman1973explanation,baker1985the}.
-One explanation for this is that the order of morphemes reflects the order of formerly independent elements that have been fossilized into bound morphemes, which can often be verified in languages where historical data is available \citet{givon1971historical,venneman1973explanation}.
+One explanation for this is that the order of morphemes reflects the order of formerly independent elements that have been fossilized into bound morphemes, which can often be verified in languages where historical data is available \citep{givon1971historical,venneman1973explanation}.
 % interesting: Evans, Nicholas (1995). Multiple case in Kayardild: Anti-iconic suffix ordering and the diachronic filter. In Plank (ed.) 1995, 396-430. 
 % Moravcsik, Edith A. (1995). Summing up Suffixaufnahme. In Plank (ed.) 1995, 451-484.  HEREL : 478, G24
 % Cited by https://typo.uni-konstanz.de/rara/universals-archive/41/
 On the other hand, \citet{bybee-morphology-1985} points out that there are historically documented cases where morpheme ordering has been restructured in ways that do not reflect former independent words, but respect the universal tendencies proposed by her (see also \citet{mithun2000the, haspelmath1993the, mithun1995affixation}; \citet[Section 15]{rice2000morpheme}).
 A correspondence between the order of words and morphemes has also been postulated on a purely synchronic basis as a constraint on possible human languages.
-For example, \cite{baker1985the} proposed the Mirror Principle, which -- informally -- states that the order of elements (morphemes) in morphology reflects the order of elements (words) in syntax.
+\cite{baker1985the} proposed the Mirror Principle, which -- informally -- states that the order of elements (morphemes) in morphology reflects the order of elements (words) in syntax.
 A large body of work in theoretical syntax describes word and morpheme order using the same processes and principles \citep{halle1993distributed}.
 As a theory of order at multiple levels, the Efficient Tradeoff Hypothesis is compatible with these different historical paths and predicts these ordering patterns independently of the historical path leading to the morphemes found in a given language.
 
@@ -991,7 +992,16 @@ As a theory of order at multiple levels, the Efficient Tradeoff Hypothesis is co
 
 %The principle of semantic scope is explained in detail and illustrated with copiousexamples in \cite{caballero2010scope}. \cite{narrog2010the} and most of the papers included in thenext issue provide analyses based on semantic scope, Aronoff and Xu (next issue),Korotkova and Lander (next issue), and Nordlinger (next issue).
 
-Another prominent account is in terms of semantic scope \citep{rice2000morpheme}.
+
+
+
+Other prominent accounts are in terms of a correspondence between morpheme ordering and semantics~\citep{bybee-morphology-1985,rice2000morpheme}.
+\citet{bybee-morphology-1985} argues that semantic relevance determines ordering.
+For example, (TODO an example).
+We suggest that mutual information provides an operational formalization of semantic relevance.
+Relatedly, \citep{culbertson2020from} link conceptual closeness to MI, and argue that it is a driver of order (in the domain of noun phrase modifiers)
+
+A second prominent semantic account is in terms of semantic scope \citep{rice2000morpheme}.
 This is the idea that morphemes are ordered in the order in which their meanings combine \citep[e.g.,][]{rice2000morpheme, caballero2010scope,  narrog2010the}.
 The relative ordering of valence and voice is a good example for the scope-based explanation.
 Valence affixes change the number of arguments, and passive (voice) promotes one argument to the subject position.
@@ -1013,40 +1023,30 @@ Causative adds an argument indicating who makes an object freeze, and passive th
 A priori, semantic scope is different from mutual information.
 However, there are arguments that scope relations correlate with mutual information.
 \citet{culbertson2020from} made a related argument for the order of nominal modifiers as in ``the four green books'', where mutual information predicts the order of attachment of modifiers to the noun.
-Furthermore, if the semantic propositions that speakers communicate are modeled using a probabilistic language of thought grammar such as CITE, mutual information will also correlate with scope ordering (see SI Appendix Section X for a simulation study).
+Furthermore, if the semantic propositions that speakers communicate are modeled using a probabilistic language-of-thought grammar such as CITE, mutual information will also correlate with scope ordering (see SI Appendix Section X for a simulation study).
 
 
-\cite{Hahn2020modeling} suggested that information locality provides a formalization of Bybee's \citep{bybee-morphology-1985} claim that semantic relevance determines ordering.
-We suggest that mutual information provides an operational formalization of semantic relevance.
-Relatedly, \citep{culbertson2020from} link conceptual closeness to MI, and argue that it is a driver of order (in the domain of noun phrase modifiers)
+
 
 \subsection{Cognitive Motivations}
 
-A prominent cognitively-motivated theory of morpheme ordering is the theory of complexity-based ordering \citep{plag2009suffix}.
-This theory holds that affixes are closer to the root when they are less strongly separable from the base.
-This can be motivated in terms of the dual processing race model of morphological access, which asserts that morphological forms can be processed either separately in terms of its components or as a whole (Baayen 1993).
-Forms are more separable if they are less likely to be processed together with the root (Baayen \& Schreuder 1999, Baayen \& Moscoso del Prado Mart ́ın 2005).
+A prominent cognitively-motivated theory of morpheme ordering is the theory of Complexity-Based Ordering \citep{hay2002speech,plag2002the,hay2004what,hay2005shifting,plag2009suffix}.
+This theory holds that affixes are closer to the root when they are less ``separable'', where separability can be operationalized in different ways, such as in terms of productivity, relative frequency of base and composite form, and the likelihood that affixes are processed separately with the base in human lexical access  \citep{baayen1993on}.
 
-
-also mention \cite{manova2010suffix}
+%In particular, affixes are less ``separable'' when they are processed holistically together with the base in human lexical access \citep{baayen1993on}. %, such as in the dual processing race model of morphological access, which asserts that morphological forms can be processed either separately in terms of its components or as a whole \citep{baayen1993on}.
+%Forms are more separable if they are less likely to be processed together with the root (Baayen \& Schreuder 1999, Baayen \& Moscoso del Prado Mart ́ın 2005).
+%also mention \cite{manova2010suffix}
 %\cite{plag2009suffix} %http://www.sfs.uni-tuebingen.de/~hbaayen/publications/plagBaayenLanguage2009.pdf
 
 
-Usage statistics
--- Hay 2002
--- Plag 2002
--- Hay and Plag 2004
--- Hay and Baayen 2005
--- Plag and Baayen 2009: productivity
 
-
-On operationalization of separability is in terms of relative frequencies:
+A statistical operationalization of separability is in terms of relative frequencies:
 affixes are more likely to be processed together with the root when the composite form has a higher frequency compared to the base form \cite{hay2001lexical, lee2011ordering}.
 This has an interesting relation to mutual information: 
 If the compound form is very frequent, in relation to the baseline frequencies of the base and the affix, then there is high (pointwise) mutual information between them.
 
 More recently, and most closely related to our proposal, \citet{inkelas2015informativity} has proposed that morphemes are ordered together when they are informative about each other.
-Formally (drawing on Cohen Priva 2013), they considered the informativity between a suffix $S_i$ and the preceding $S_{i-1}$ as 
+Formally (drawing on the notion of informativity defined by \citet{priva2017informativity}), they considered the informativity between a suffix $S_i$ and the preceding $S_{i-1}$ as 
 \begin{equation}
     \sum_{S_{i-1}, S_{i}} \frac{P(S_{i-1} , S_i)}{P(S_i)} \log P(S_i | S_{i-1})
 \end{equation}
