--- a/literature.bib
+++ b/literature.bib
@@ -58198,7 +58198,7 @@ African Linguistics",
 
 @article{priva2017informativity,
 	title="Informativity and the actuation of lenition",
-	author="Uriel Cohen {Priva}",
+	author="Uriel {Cohen Priva}",
 	journal="Language",
 	volume="93",
 	number="3",
@@ -58239,4 +58239,44 @@ African Linguistics",
 	year="2002"
 }
 
+@article{inkelas2016affix,
+	title="Affix ordering in Optimal Construction Morphology",
+	author="Sharon {Inkelas}",
+	journal="",
+	pages="479--512",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2500986300",
+	year="2016"
+}
+
+@article{nordlinger2010verbal,
+	title="Verbal morphology in Murrinh-Patha: evidence for templates",
+	author="Rachel {Nordlinger}",
+	journal="Morphology",
+	volume="20",
+	number="2",
+	pages="321--341",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2006889065",
+	year="2010"
+}
+
+@article{korotkova2010deriving,
+	title="Deriving affix ordering in polysynthesis: evidence from Adyghe",
+	author="Natalia {Korotkova} and Yury {Lander}",
+	journal="Morphology",
+	volume="20",
+	number="2",
+	pages="299--319",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2090194572",
+	year="2010"
+}
+
+@incollection{courtenay1895attempt,
+    author="Baudouin de Courtenay",
+    year="1895 [1972]",
+    title="An attempt at a theory of phonetic alternations",
+    editor="Edward Stankiewicz",
+    booktitle="A Baudouin de Courtenay anthology",
+    address="Bloomington",
+    publisher="Indiana University Press"
+}
 
