--- a/literature.bib
+++ b/literature.bib
@@ -58280,3 +58280,37 @@ African Linguistics",
     publisher="Indiana University Press"
 }
 
+@article{maurits2020best,
+        title="Best practices in justifying calibrations for dating language families",
+        author="L {Maurits} and M de {Heer} and T {Honkola} and M {Dunn} and O {Vesakoski}",
+        journal="Journal of Language Evolution",
+        volume="5",
+        number="1",
+        pages="17--38",
+        notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2997899473",
+        year="2020"
+}
+
+@article{rice2011principles,
+	title="Principles of affix ordering: An overview",
+	author="Keren {Rice}",
+	journal="Word Structure",
+	volume="4",
+	number="2",
+	pages="169--200",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2111042112",
+	year="2011"
+}
+
+@article{bauer2010an,
+	title="An overview of morphological universals",
+	author="Laurie {Bauer}",
+	journal="Word Structure",
+	volume="3",
+	number="2",
+	pages="131--140",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2013192921",
+	year="2010"
+}
+
+
