--- a/literature.bib
+++ b/literature.bib
@@ -58313,4 +58313,11 @@ African Linguistics",
 	year="2010"
 }
 
+@incollection{corbett2003agreement,
+	title="Agreement: Terms and Boundaries",
+	author="Greville G. {Corbett}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1511653461",
+	year="2003"
+}
+
 
