--- a/figures/turkish_verbs/comparison-opt-uni.tex
+++ b/figures/turkish_verbs/comparison-opt-uni.tex
@@ -8,29 +8,22 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=0.9cm,anchor=base] (B0) at (1,-0.3) {Optimized};
 \node[rectangle,text width=1.2cm,anchor=base] (A1) at (4,-1.0) {Valence};
 \node[rectangle,text width=1.2cm,anchor=base] (A2) at (4,-1.5) {Voice};
-\node[rectangle,text width=1.2cm,anchor=base] (A3) at (4,-2.0) {Aspect};
-\node[rectangle,text width=1.2cm,anchor=base] (A4) at (4,-2.5) {Tense};
-\node[rectangle,text width=1.2cm,anchor=base] (A5) at (4,-3.0) {Mood};
-\node[rectangle,text width=1.2cm,anchor=base] (A6) at (4,-3.5) {Agreement};
+\node[rectangle,text width=1.2cm,anchor=base] (A3) at (4,-2.0) {TAM};
+\node[rectangle,text width=1.2cm,anchor=base] (A4) at (4,-2.5) {Agreement};
 \node[rectangle,text width=1.2cm,anchor=base] (B1) at (1,-1.0) {Valence};
 \node[rectangle,text width=1.2cm,anchor=base] (B2) at (1,-1.5) {Voice};
 \node[rectangle,text width=1.2cm,anchor=base] (B3) at (1,-2.0) {Polarity};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {Politeness};
-\node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {TAM 1};
+\node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {TAM 1};
+\node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {Mood};
 \node[rectangle,text width=1.2cm,anchor=base] (B6) at (1,-3.5) {TAM 2};
 \node[rectangle,text width=1.2cm,anchor=base] (B7) at (1,-4.0) {3Pl};
 \node[rectangle,text width=1.2cm,anchor=base] (B8) at (1,-4.5) {Genitive};
-\node[rectangle,text width=1.2cm,anchor=base] (B9) at (1,-5.0) {Nominal};
-\node[rectangle,text width=1.2cm,anchor=base] (B10) at (1,-5.5) {Possessor};
-\node[rectangle,text width=1.2cm,anchor=base] (B11) at (1,-6.0) {Mood};
-\node[rectangle,text width=1.2cm,anchor=base] (B12) at (1,-6.5) {Agreement};
+\node[rectangle,text width=1.2cm,anchor=base] (B9) at (1,-5.0) {Agreement};
 \draw[-] (A1.west) to (B1.east);
 \draw[-] (A2.west) to (B2.east);
+\draw[-] (A3.west) to (B4.east);
 \draw[-] (A3.west) to (B5.east);
-\draw[-] (A4.west) to (B5.east);
 \draw[-] (A3.west) to (B6.east);
-\draw[-] (A4.west) to (B6.east);
-\draw[-] (A6.west) to (B7.east);
-\draw[-] (A5.west) to (B11.east);
-\draw[-] (A6.west) to (B12.east);
+\draw[-] (A4.west) to (B7.east);
+\draw[-] (A4.west) to (B9.east);
 \end{tikzpicture}
